--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        
+
+
+
+        function computerPlay(computerSelection) {
+            const myArray = ["rock", "paper", "scissors"];
+            return myArray[Math.floor(Math.random() * myArray.length)];
+
+        }
+
+        function playRound(playerSelection, computerSelection) {
+
+            if (playerSelection === computerSelection) {
+                return "It's a tie!";
+            } else if (playerSelection === "rock" && computerSelection === "scissors"
+                || playerSelection === "paper" && computerSelection === "rock" ||
+                playerSelection === "scissors" && computerSelection === "paper") {
+                return "Player wins!";
+            } else {
+                return "Computer wins!";
+            }
+
+        }
+
+
+        const playerSelection = "rock".toLowerCase();
+        const computerSelection = computerPlay();
+
+        console.log(computerSelection, playerSelection,
+            playRound(playerSelection, computerSelection));
+
     </script>
 </body>
+
 </html>
