--- a/index.html
+++ b/index.html
@@ -4,68 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 
 <body>
-    <script>
+    <h1 class="title">Rock, Paper, Scissors</h1>
 
+    <div class="current-score">
+        <div id="player-score">Player Score: 0</div>
+        <div id="computer-score">Computer Score: 0</div>
+    </div>
 
+    <div class="choices">
+        <button class="button" id="rock" type="button">Rock</button>
+        <button class="button" id="paper" type="button">Paper</button>
+        <button class="button" id="scissors" type="button">Scissors</button>
+    </div>
 
-        let playerScore = 0;
-        let computerScore = 0;
-        let roundCount = 0;
+    <div id="results">
+        <div id="game-winner"></div>
+        <div id="round-winner"></div>
+    </div>
 
+    <div id="reset-game"></div>
+    
+    
 
-        while (roundCount < 5) {
-            const playerSelection = prompt("Rock, Paper, or Scissors".toLowerCase);
-            const computerSelection = computerPlay();
+    </div>
 
-            if (playRound === "A tie") {
-                roundCount++
-            } else if (playRound(playerSelection, computerSelection) === "Player wins") {
-                playerScore++;
-                roundCount++;
-            } else {
-                computerScore++;
-                roundCount++;
-            }
+    <script src="main.js"></script>
 
-
-            function computerPlay(computerSelection) {
-                const myArray = ["rock", "paper", "scissors"];
-                return myArray[Math.floor(Math.random() * myArray.length)];
-            }
-
-
-
-            function playRound(playerSelection, computerSelection) {
-                if (playerSelection === computerSelection) {
-                    return "A tie";
-                } else if (playerSelection === "rock" && computerSelection === "scissors"
-                    || playerSelection === "paper" && computerSelection === "rock" ||
-                    playerSelection === "scissors" && computerSelection === "paper") {
-                    return "Player wins"
-                } else {
-                    return "Computer wins"
-                }
-            }
-
-
-
-        }
-
-
-        if (playerScore > computerScore) {
-            console.log("Player wins game!");
-        } else if (computerScore > playerScore) {
-            console.log("Computer wins game!");
-        }
-
-
-        console.log(playerScore, computerScore, roundCount);
-
-    </script>
 </body>
 
 </html>
